--- a/FixedAsset_MVC/Pages/Login.html
+++ b/FixedAsset_MVC/Pages/Login.html
@@ -5,9 +5,9 @@
     <hr />
     <div>
         <input type="text" ng-model="username" name="username" />
-        <input type="text" ng-model="password" name="password" />
+        <input type="password"  ng-model="password" name="password" />
     </div>
     <div class="btn">
-        <input type="submit" value="LogIn" ng-click="getUser()">
+        <input type="submit" value="LogIn" ng-click="login()">
     </div>
 </div>
