--- a/FixedAsset_MVC/Home.html
+++ b/FixedAsset_MVC/Home.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fixed Asset Management System</title>
-    <link href="Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="Scripts/modernizr-2.6.2.js"></script>
-
-    <script src="Scripts/angular.min.js"></script>
-    <script src="Scripts/angular-route.min.js"></script>
-    <script src="ScriptsNg/Controllers/LoginController.js"></script>
+    <link href="../Content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="../Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <script src="../Scripts/modernizr-2.6.2.js"></script>
+    
+    <script src="../Scripts/angular.min.js"></script>
+    <script src="../Scripts/angular-route.min.js"></script>
+    <script src="../ScriptsNg/Controllers/LoginController.js"></script>
 
 </head>
-<body ng-app="faAppLogIn">
+<body ng-app="faApp">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -26,7 +26,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#!/Login"><i class="fa fa-home"></i>Login</a></li>
+                    <li><a href="#" ng-click="logOut()" ><i class="fa fa-home"></i>LogOut</a></li>
                     <li><a href="#!/Next">Next</a></li>
                 </ul>
             </div>
@@ -43,8 +43,8 @@
         </footer>
     </div>
 
-    <script src="Scripts/jquery-1.10.2.min.js"></script>
-    <script src="Scripts/bootstrap.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-cookies.js"></script>
+    <script src="../Scripts/jquery-1.10.2.min.js"></script>
+    <script src="../Scripts/bootstrap.min.js"></script>
+
 </body>
 </html>
