--- a/FixedAsset_MVC/Index.html
+++ b/FixedAsset_MVC/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fixed Asset Management System</title>
+    <title>Login-Fixed Asset Management System</title>
     <link href="Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="Scripts/modernizr-2.6.2.js"></script>
@@ -11,6 +11,7 @@
     <script src="Scripts/angular.min.js"></script>
     <script src="Scripts/angular-route.min.js"></script>
     <script src="ScriptsNg/Controllers/LoginController.js"></script>
+    <script src="ScriptsNg/Controllers/HomeController.js"></script>
 
 </head>
 <body ng-app="faAppLogIn">
