--- a/FixedAsset_MVC/Home.html
+++ b/FixedAsset_MVC/Home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fixed Asset Management System</title>
+    <title>Home-Fixed Asset Management System</title>
     <link href="../Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="../Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="../Scripts/modernizr-2.6.2.js"></script>
@@ -11,9 +11,10 @@
     <script src="../Scripts/angular.min.js"></script>
     <script src="../Scripts/angular-route.min.js"></script>
     <script src="../ScriptsNg/Controllers/LoginController.js"></script>
+    <script src="../ScriptsNg/Controllers/HomeController.js"></script>
 
 </head>
-<body ng-app="faApp">
+<body ng-app="Home">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -26,7 +27,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#" ng-click="logOut()" ><i class="fa fa-home"></i>LogOut</a></li>
+                    <li><a href="#" ng-click="logOut()" ><i class="fa fa-home"></i>Logout</a></li>
                     <li><a href="#!/Next">Next</a></li>
                 </ul>
             </div>
@@ -45,6 +46,9 @@
 
     <script src="../Scripts/jquery-1.10.2.min.js"></script>
     <script src="../Scripts/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-cookies.js"></script>
 
 </body>
 </html>
+
+<!--<h1>Home</h1>-->
