--- a/FixedAsset_MVC/Home.html
+++ b/FixedAsset_MVC/Home.html
@@ -28,6 +28,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li><a href="#!/Company" ng-click="getAll()"><i class="fa fa-home"></i>Company</a></li>
                     <li><a href="#" ng-click="logOut()" ><i class="fa fa-home"></i>Logout</a></li>
                     <li><a href="#!/Next">Next</a></li>
                 </ul>
