--- a/FixedAsset_MVC/Index.html
+++ b/FixedAsset_MVC/Index.html
@@ -12,7 +12,7 @@
     <script src="Scripts/angular-route.min.js"></script>
     <script src="ScriptsNg/Controllers/LoginController.js"></script>
     <script src="ScriptsNg/Controllers/HomeController.js"></script>
-
+    <script src="ScriptsNg/Controllers/CompanyController.js"></script>
     
 </head>
 <body ng-app="faAppLogIn">
