--- a/FixedAsset_MVC/Home.html
+++ b/FixedAsset_MVC/Home.html
@@ -12,6 +12,7 @@
     <script src="../Scripts/angular-route.min.js"></script>
     <script src="../ScriptsNg/Controllers/LoginController.js"></script>
     <script src="../ScriptsNg/Controllers/HomeController.js"></script>
+    <script src="../ScriptsNg/Controllers/CompanyController.js"></script>
 
     
 </head>
