--- a/FixedAsset_MVC/Pages/Company.html
+++ b/FixedAsset_MVC/Pages/Company.html
@@ -3,7 +3,11 @@
 <a href="#!/Company" ng-click="getAll()"><i class="fa fa-home"></i>Refresh</a>
 <br />
 <table class="table table-striped">
-    <tr ng-repeat="companyModel in allCompanies">
+    <tr>
+        <th scope="col">CODE</th>
+        <th scope="col">NAME</th>
+    </tr>
+    <tr ng-repeat="companyModel in allCompanies" >
         <td>{{companyModel.code}}</td>
         <td>{{companyModel.name}}</td>
     </tr>
