--- a/FixedAsset_MVC/Pages/Company.html
+++ b/FixedAsset_MVC/Pages/Company.html
@@ -19,8 +19,8 @@
     </table>
 </div>
 <div ng-show="showDetail">
-    <h5>{{companyModel.code}}</h5>
+    <h5>Company code : {{companyModel.code}}</h5>
     <br />
-    <h5>{{companyModel.name}}</h5>
+    <h5>Name of Company : {{companyModel.name}}</h5>
     <button type="submit" id="btBack" ng-click="showGrid()">Back</button>
 </div>
