--- a/FixedAsset_MVC/Home.html
+++ b/FixedAsset_MVC/Home.html
@@ -31,7 +31,7 @@
                 <ul class="nav navbar-nav" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
                     <li><a href="#!/Company" ng-click="getAll()"><i class="fa fa-home"></i>Company</a></li>
                     <li class="menu-item dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Masters<b class="caret"></b></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown">Masters<b class="caret"></b></a>
                         <ul class="dropdown-menu " style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
                             <li class="menu-item dropdown dropdown-submenu"><a href="#!/Asset" ng-click="getAll()"><i class="fa fa-home"></i>Asset</a></li>
                         </ul>
