--- a/FixedAsset_MVC/Index.html
+++ b/FixedAsset_MVC/Index.html
@@ -16,9 +16,9 @@
     
 </head>
 <body ng-app="faAppLogIn">
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
-            <div class="navbar-header">
+            <div class="navbar-header" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -27,7 +27,7 @@
                 <span class="navbar-brand">Fixed Asset Management System</span>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
                     <li><a href="#!/Login"><i class="fa fa-home"></i>Login</a></li>
                     <li><a href="#!/Next">Next</a></li>
                 </ul>
