--- a/FixedAsset_MVC/Index.html
+++ b/FixedAsset_MVC/Index.html
@@ -14,6 +14,7 @@
     <script src="ScriptsNg/Controllers/HomeController.js"></script>
     <script src="ScriptsNg/Controllers/CompanyController.js"></script>
     
+    <!--<base href="/" />-->
 </head>
 <body ng-app="faAppLogIn">
     <div class="navbar navbar-default navbar-fixed-top">
