--- a/FixedAsset_MVC/Home.html
+++ b/FixedAsset_MVC/Home.html
@@ -15,6 +15,7 @@
     <script src="../ScriptsNg/Controllers/CompanyController.js"></script>
     <script src="../ScriptsNg/Controllers/AssetController.js"></script>
     
+    <!--<base href="/" />-->
 </head>
 <body ng-app="Home">
     <div class="navbar navbar-default navbar-fixed-top">
